// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preface Screen Button enabled by checkbox being checked 1`] = `
<BVLinearGradient
  colors={
    Array [
      4279917146,
      4279057725,
      4278857262,
    ]
  }
  endPoint={
    Object {
      "x": 0.5,
      "y": 1,
    }
  }
  locations={null}
  startPoint={
    Object {
      "x": 0.5,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
        >
          <View
            style={Object {}}
          >
            <
              height={200}
              style={
                Object {
                  "alignSelf": "center",
                  "marginBottom": 20,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "backgroundColor": "rgba(30, 45, 45, 0.95)",
                "borderRadius": 24,
                "marginBottom": 40,
                "marginHorizontal": 16,
                "marginTop": "auto",
                "padding": 24,
                "paddingBottom": 28,
                "paddingHorizontal": 24,
                "paddingTop": 28,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "600",
                  "marginBottom": 12,
                }
              }
            >
              Preface.PrimaryHeading
            </Text>
            <Text
              style={
                Object {
                  "color": "#9CBBBB",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 22,
                }
              }
            >
              Preface.Paragraph1
            </Text>
            <View
              style={
                Object {
                  "marginTop": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row-reverse",
                    "margin": 10,
                  }
                }
              >
                <View
                  accessibilityLabel="Terms.IAgree"
                  accessibilityRole="checkbox"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": true,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="com.ariesbifold:id/IAgree"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#42803E",
                          "fontSize": 36,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "normal",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "flexShrink": 1,
                          "fontSize": 18,
                          "fontWeight": "normal",
                          "marginLeft": 0,
                          "marginRight": 10,
                        },
                        Object {
                          "color": "#9CBBBB",
                          "flex": 1,
                          "fontSize": 13,
                          "fontWeight": "bold",
                          "lineHeight": 18,
                          "marginLeft": 12,
                        },
                      ],
                    ]
                  }
                >
                  Preface.Confirmed
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Global.Continue"
              accessibilityState={
                Object {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                Object {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#0D7377",
                  "borderRadius": 24,
                  "justifyContent": "center",
                  "marginTop": 24,
                  "minHeight": 48,
                  "opacity": 0.5,
                  "paddingHorizontal": 32,
                  "paddingVertical": 14,
                }
              }
              testID="com.ariesbifold:id/Continue"
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  }
                }
              >
                Global.Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</BVLinearGradient>
`;

exports[`Preface Screen Renders correctly 1`] = `
<BVLinearGradient
  colors={
    Array [
      4279917146,
      4279057725,
      4278857262,
    ]
  }
  endPoint={
    Object {
      "x": 0.5,
      "y": 1,
    }
  }
  locations={null}
  startPoint={
    Object {
      "x": 0.5,
      "y": 0.3,
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Object {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
        >
          <View
            style={Object {}}
          >
            <
              height={200}
              style={
                Object {
                  "alignSelf": "center",
                  "marginBottom": 20,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "backgroundColor": "rgba(30, 45, 45, 0.95)",
                "borderRadius": 24,
                "marginBottom": 40,
                "marginHorizontal": 16,
                "marginTop": "auto",
                "padding": 24,
                "paddingBottom": 28,
                "paddingHorizontal": 24,
                "paddingTop": 28,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 22,
                  "fontWeight": "600",
                  "marginBottom": 12,
                }
              }
            >
              Preface.PrimaryHeading
            </Text>
            <Text
              style={
                Object {
                  "color": "#9CBBBB",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 22,
                }
              }
            >
              Preface.Paragraph1
            </Text>
            <View
              style={
                Object {
                  "marginTop": 20,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row-reverse",
                    "margin": 10,
                  }
                }
              >
                <View
                  accessibilityLabel="Terms.IAgree"
                  accessibilityRole="checkbox"
                  accessibilityState={
                    Object {
                      "busy": undefined,
                      "checked": false,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    Object {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 44,
                      "left": 44,
                      "right": 44,
                      "top": 44,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID="com.ariesbifold:id/IAgree"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#42803E",
                          "fontSize": 36,
                        },
                        undefined,
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "normal",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "flexShrink": 1,
                          "fontSize": 18,
                          "fontWeight": "normal",
                          "marginLeft": 0,
                          "marginRight": 10,
                        },
                        Object {
                          "color": "#9CBBBB",
                          "flex": 1,
                          "fontSize": 13,
                          "fontWeight": "bold",
                          "lineHeight": 18,
                          "marginLeft": 12,
                        },
                      ],
                    ]
                  }
                >
                  Preface.Confirmed
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Global.Continue"
              accessibilityState={
                Object {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                Object {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#0D7377",
                  "borderRadius": 24,
                  "justifyContent": "center",
                  "marginTop": 24,
                  "minHeight": 48,
                  "opacity": 0.5,
                  "paddingHorizontal": 32,
                  "paddingVertical": 14,
                }
              }
              testID="com.ariesbifold:id/Continue"
            >
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  }
                }
              >
                Global.Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</BVLinearGradient>
`;
